--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "rbxts-transformer-rcov",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Transformer for rcov to track line execution - depends on @rbxts/rcov being installed",
   "main": "out/index.js",
   "author": "runicly",
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/R-unic/rbxts-transformer-rcov.git"
+    "url": "git+https://github.com/R-unic/rbxts-transformer-rcov.git"
   },
   "peerDependencies": {
-    "typescript": "^5.2.2"
+    "typescript": "^5.5.2"
   },
   "scripts": {
     "prepare": "npm run build",
