--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rbxts-transformer-rcov",
-  "version": "1.2.5",
+  "version": "1.2.6",
   "description": "Transformer for rcov to track line execution - depends on @rbxts/rcov being installed",
   "main": "out/index.js",
   "author": "runicly",
@@ -10,7 +10,7 @@
     "url": "git+https://github.com/R-unic/rbxts-transformer-rcov.git"
   },
   "peerDependencies": {
-    "typescript": "^5.5.2"
+    "typescript": "=5.5.2"
   },
   "scripts": {
     "prepare": "npm run build",
